# AttentionTAD

./: .gitattributes  .gitignore  GM12878_TAD_boundaries.bed  HCT116_TAD_boundaries.bed  HMEC_TAD_boundaries.bed  HUVEC_TAD_boundaries.bed  IMR90_TAD_boundaries.bed  K562_TAD_boundaries.bed  NHEK_TAD_boundaries.bed  README.md  pyproject.toml  tad_boundary_model_comparison_compat.py  tad_boundary_preprocessor.py  train_tad_model.py
CREATE/: create_train.py  data_loader.py  layer.py  main.py  predict.py  test.py
examples/: README.md  generate_example_reference.py
examples/data/: example_boundaries.bed
src/attentiontad/: __init__.py  model.py  preprocessing.py  training.py
tests/: test_preprocessing.py  test_training_io.py
